# NocturneRecomp

./: .gitignore  .sdk-version  CMakeLists.txt  CMakePresets.json  LEADERBOARD_HANG_INVESTIGATION.md  README.md  nocturnerecomp_config.toml  nocturnerecomp_tu_config.toml  scratch_lldb.py  working-leaderboards.md
.github/workflows/: _build.yml  ci.yml  release.yml
docs/: dumping-and-replacing-assets.md  making-mods.md  native-renderer-headless-boot.md  native-renderer-pacing-investigation.md  native-renderer-shader-replacement.md  native-rendering.md  skip-intros-finding.md  smoke-vertex-bug.md
mods_src/blackboard/: mod.toml
mods_src/bus_inspector/: mod.toml
mods_src/common/mod_cmake/: rexmod.cmake
mods_src/event_ping/: mod.toml
mods_src/event_pong/: mod.toml
mods_src/fast_forward/: CMakeLists.txt  mod.toml  mod_main.cpp
mods_src/function_override_demo/: mod.toml
mods_src/game_symbols/: mod.toml  mod_main.cpp
mods_src/graphics_settings/: mod.toml
mods_src/memory_peek/: mod.toml  mod_main.cpp
mods_src/music_player/: mod.toml
mods_src/sample_overlay/: mod.toml
mods_src/ui_color/: mod.toml
resources/shaders/: crt.slang
scripts/: build.py  capture_frame.py  deploy-sdk.py  extract_tu.py  gen-fonts.py  gen-icon.py  make_mods.py  match_tu_functions.py  peek_leaderboard_state.py  resolve_gpu_wait.py  run.py  scan_guest_memory.py  trace_leaderboard_entry.py  trigger_capture.py
scripts/docker/: linux-mod-build.Dockerfile  windows-mod-build.Dockerfile
scripts/launch_templates/: run.bat  run.sh
src/: accent_color.cpp  accent_color.h  achievements_menu.cpp  achievements_menu.h  audio_player.cpp  fast_forward.cpp  fast_forward.h  frame_pacer.cpp  frame_pacer.h  headless_gpu_bridge.cpp  headless_gpu_bridge.h  native_command_processor.cpp  native_command_processor.h  native_immediate_drawer.h  nocturnerecomp.rc.in  nocturnerecomp_app.h  nocturnerecomp_hooks.cpp  ppc_interpreter.cpp  ppc_interpreter.h  rando_xex.cpp  rando_xex.h  repaint_pump.h  room_presence.cpp  room_presence.h  version.generated.h.in  xbox_live.cpp
